# safe-install

./: .gitignore  LICENSE  README.md  pyproject.toml  safe_install.py
